Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21910

Opening a core file does not load .debug files

    XMLWordPrintable

Details

    • Linux/X11
    • 5930a1c4682442855a2f81a10fc17a16c2ee43fd

    Description

      Needed .debug file is placed in the same path as the executable, but it does not appear to be loaded automatically without manually adding the search path in gdb settings ("set solib-search-path ..." or "symbol ..."). This seems obvious place for it to look for them, so maybe this search path should be set automatically.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-21910
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes